# YouTube-Sentiment-Insights-MLOps

./: .gitignore  Dockerfile  README.md  app.py  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cicd.yaml
config/: config.yaml
research/: 3_experiment_2_bow_tfidf.ipynb
src/components/data/: __init__.py  data_ingestion.py  data_preprocessing.py
src/components/model/: __init__.py  model_building.py  model_evaluation.py  prediction.py  register_model.py
src/config/: configuration.py
src/entity/: __init__.py  config_entity.py
src/pipeline/: predict.py  stage_01_data_ingestion.py  stage_02_data_preprocessing.py  stage_03_model_building.py  stage_04_model_evaluation.py  stage_05_model_registry.py
src/utils/: common.py
yt-chrome-plugin-frontend/: config.js.template  popup.html  popup.js
