[project]
name = "ete"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "box>=0.1.5",
    "cycler>=0.12.1",
    "ensure>=1.0.4",
    "fastapi>=0.116.0",
    "kiwisolver>=1.4.8",
    "numpy>=2.3.1",
    "packaging>=25.0",
    "pillow>=11.3.0",
    "pyparsing>=3.2.3",
    "python-box>=7.3.2",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "scikit-learn>=1.7.0",
    "uvicorn>=0.35.0",
]
